# rulesofriveravulsion

./: .gitignore  BASED_validation.py  Figure1_histogram.py  Figure2.py  Figure3.py  LICENSE  README.html  README.md  datadictionary_supplement.txt  plot_figures.zsh  pyproject.toml  reproduce_figs.py
based/: BASED_validation.py  based_trainer_full.py  based_trainer_sans_trampush.py  data_format.py  plot_metrics.py
data/BASED_model/: GlobalDatasets.xlsx  HG_data_comp_complete.csv  TrampushDataClean.csv  based_input_data.csv  fulton_ds_with_slope.parquet  power_law_params.pickle
data/Figure4_data/: AFR_EAST_FIG4_FABDEM.tif  BETSI_FIG4_FABDEM.tif  CON_FIG4_FABDEM.tif  JA26.geojson  JA26_FIG4_SRTM.tif  KAZ_FIG4_FABDEM.tif  MAHAJAMBA_30.tif  MAHAJAMBA_30.tif.aux.xml  MALAWI_FIG4_FABDEM2.tif  OTHERAFR_FIG4_FABDEM.tif  V11_FIG4_FABDEM2.tif  V11_FIG4_FABDEM2.tif.aux.xml  VENEZ_2023_FIG4_FABDEM.tif  VENEZ_2023_FIG4_FABDEM.tif.aux.xml  VENEZ_N_2023_FIG4_FABDEM.tif  VENEZ_N_2023_FIG4_FABDEM.tif.aux.xml  betsi_2004.geojson  betsi_rwc.tif  betsiboka_2004_point.geojson  con2013_rwc.tif  con_001_2013_point.geojson  con_2013.geojson  kaz_2011_4326.geojson  kaz_point.geojson  kaz_rwc.tif  mahajamba.geojson  mahajamba_point.geojson  mahajamba_rwc.tif  malawi_2014.geojson  malawi_point.geojson  other_afr_point.geojson  otherafr.geojson  otherafr_point.geojson  (+6 more)
figure_plotting/: Figure1_histogram.py  Figure2.py  Figure3.py  Figure4_interactive.py  Figure4_interactive_README.md  cross_section_mapview.py  cross_section_sideview.py  dem_ops.py  extended_data.py  final_figs.ipynb  finalfigs.ipynb  geojson_creator.py  reproduce_figs.py  sample_lines.py  walk_funcs.py
(+32 files in other folders)
